[REFACTOR] 관리비 dto 개선